# Prompt-Optimizer

./: .gitignore  Makefile  README.md  flask_server.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
engine/: prototype.py
frontend/: test.ts
javascript/openai-nodejs-server/: README.md  package-lock.json  package.json  tsconfig-backup.json  tsconfig.json
javascript/openai-nodejs-server/src/: ResponseData.ts  index.ts
javascript/openai-react-client/: README.md  package-lock.json  package.json
javascript/openai-react-client/src/: App.css  App.tsx
promptop/: __init__.py  api.py  config.py  example.py  img.py  prompt_templates.py  prototype.py
tests/unit_tests/: __init__.py  test_root_components.py
ui/: deno.json  fresh.gen.ts  import_map.json  main.ts  twind.config.ts
ui/components/: Msg.tsx  Msgs.tsx  Task.tsx  Tasks.tsx  msg-box.tsx  msg-boxes.tsx  msgbox.tsx  msgboxes.tsx
ui/connections/: server.ts  types.ts
ui/islands/: ConvBox.tsx
ui/routes/: index.tsx
ui/routes/api/: gen_image.ts  gen_text.ts
