[tool.poetry]
name = "promptop"
version = "0.0.2"
description = "optimize prompts for stable diffusion"
authors = ["Mike Wang <skcoirz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/skcoirz/Prompt-Optimizer"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "^2.23.0"
openai = {version = "^0"}
pillow = "^9.5.0"
diffusers = "^0.16.0"
accelerate = "^0.18.0"
torch = "^2.0.0"
transformers = "^4.28.1"
pathlib = "^1.0.1"
flask = "2.2.5"
flask-session = "^0.4.1"

[tool.poetry.group.pyserver.dependencies]
flask = "2.2.5"
flask-session = "^0.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.lint.dependencies]
mypy = {version = "^1.2.0"}
types-pillow = "^9.5.0.2"
black = {version = "^23.3.0"}
ruff = {version = "^0.0.262"}

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.poetry.extras]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
